# pocket_api

./: .gitignore  README.md  pyproject.toml
docs/: api.md
scritps/: install.ps1  run.ps1
skills/git提交规范/: skills.md
skills/python风格规范/: skills.md
sqls/: create_db.sql
src/pocket_api/: enums.py  file_storage.py  manager.py  pagination.py  pokemon_csv_importer.py  result.py
src/pocket_api/config/: settings.py  urls.py
src/pocket_api/models/: __init__.py  admin.py  django_builtin.py  domain.py
src/pocket_api/serializers/: __init__.py  admin.py  admin_auth.py  admin_imports.py  admin_pets.py  files.py  game_docs.py  generations.py  items.py  pets.py
src/pocket_api/sqls/: create_db.sql  source.sql
src/pocket_api/views/: __init__.py  auth.py  egg_groups.py  files.py  game_docs.py  generations.py  items.py  pet_payloads.py  pets.py  skills.py  tags.py
src/pocket_api/views/admin/: __init__.py  docs.py  egg_groups.py  feature_views.py  files.py  generations.py  items.py  pagination.py  pet_detail.py  pets.py  pokemon_import.py  rances.py  register.py  skill_views.py  skills.py  tags.py
