[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket_api"
authors = [{ name = "woodenEasy", email = "2314998529@qq.com" }]
description = "宝可梦后端api"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "asgiref==3.11.1",
    "Django==6.0.4",
    "djangorestframework",
    "sqlparse==0.5.5",
    "tzdata==2026.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = []

[tool.setuptools.dynamic]
version = { attr = "pocket_api.__version__" }
